[gd_scene load_steps=5 format=3 uid="uid://cwvmd7emgn7yg"]

[ext_resource type="Script" uid="uid://u7kcvafi54rj" path="res://pause_menu.gd" id="1_hdmo1"]
[ext_resource type="PackedScene" uid="uid://blr4bmpnlswj5" path="res://Start_Menu.tscn" id="2_nwcfo"]
[ext_resource type="FontFile" uid="uid://m8luhfimbqq4" path="res://Assets/Fonts/PixelWesternRegular-8g70.ttf" id="3_05uyy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p81d2"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("1_hdmo1")
main_menu_scene = ExtResource("2_nwcfo")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dim" type="ColorRect" parent="Root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6862745)

[node name="Panel" type="Panel" parent="Root"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.934, 1)

[node name="VBox" type="VBoxContainer" parent="Root/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -23.0
offset_right = 66.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ResumeButton" type="Button" parent="Root/Panel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_05uyy")
theme_override_styles/normal = SubResource("StyleBoxFlat_p81d2")
text = "Resume"

[node name="RestartButton" type="Button" parent="Root/Panel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_05uyy")
theme_override_styles/normal = SubResource("StyleBoxFlat_p81d2")
text = "Restart"

[node name="MainMenuButton" type="Button" parent="Root/Panel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_05uyy")
theme_override_styles/normal = SubResource("StyleBoxFlat_p81d2")
text = "Main Menu"

[node name="QuitButton" type="Button" parent="Root/Panel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_05uyy")
theme_override_styles/normal = SubResource("StyleBoxFlat_p81d2")
text = "Quit Game"

[connection signal="pressed" from="Root/Panel/VBox/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Root/Panel/VBox/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Root/Panel/VBox/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Root/Panel/VBox/QuitButton" to="." method="_on_quit_button_pressed"]
